2013-01-09  Antti Koivisto  <antti@apple.com>

        Release FastMalloc thread caches on memory warning
        https://bugs.webkit.org/show_bug.cgi?id=106471
        
        Reviewed by Geoff Garen.

        Use TCMalloc_ThreadCache::Cleanup() instead of calling Scavenge() twice. This releases all the memory
        and looks nicer too.

        * wtf/FastMalloc.cpp:
        (WTF::releaseFastMallocFreeMemory):

2013-01-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix make distcheck.

        * GNUmakefile.list.am: Add missing header.

2013-01-07  Filip Pizlo  <fpizlo@apple.com>

        Rationalize closure call heuristics and profiling
        https://bugs.webkit.org/show_bug.cgi?id=106270

        Reviewed by Oliver Hunt.
        
        Add a macro to add a method to a class that returns a dumper. Allows you to have
        secondary dump() methods for dumping either more or less information.

        * wtf/PrintStream.h:
        (WTF):

2013-01-07  Ryosuke Niwa  <rniwa@webkit.org>

        Sorted the xcodeproj file.

        * WTF.xcodeproj/project.pbxproj:

2013-01-07  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed, it should be possible to build JSC on ARM.

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::IncrementalScavenge):

2013-01-07  Balazs Kilvady  <kilvadyb@homejinni.com>

        MIPS LLInt implementation.
        https://bugs.webkit.org/show_bug.cgi?id=99706

        Reviewed by Filip Pizlo.

        LLInt implementation for MIPS.

        * wtf/Platform.h:

2013-01-05  Jonathan Liu  <net147@gmail.com>

        Only enable MinGW-w64 pow() workaround if needed
        https://bugs.webkit.org/show_bug.cgi?id=106099

        Reviewed by Filip Pizlo.

        The pow() workaround is no longer needed in the latest version
        of MinGW-w64.

        * wtf/MathExtras.h:

2013-01-05  Jonathan Liu  <net147@gmail.com>

        Fix compilation of MathExtras.h with MinGW-w64